--- a/style/dashboard.css
+++ b/style/dashboard.css
@@ -2,7 +2,22 @@
     display: none;
 }
 
-#headere {
-    position: sticky;
-    color: aqua;
+#card-bg {
+    background-image: linear-gradient(to right, #2b5876 , #4e4376);
 }
+
+#card-bg #text {
+    opacity: 0;
+    max-height: 0;
+    transition: all 0.3s ease;
+}
+
+#card-bg:hover #text {
+    transition: all 0.3s ease;
+    opacity: 1;
+    max-height: 33px;
+}
+/* 
+#thumb {
+    display: none;
+} */
